--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/cors": "^1.1.1",
+    "@elysiajs/jwt": "^1.1.1",
+    "@elysiajs/swagger": "^1.1.1",
+    "@prisma/client": "^5.19.1",
+    "dotenv": "^16.4.5",
+    "elysia": "^1.1.12",
+    "pg": "^8.13.0",
+    "prisma": "^5.19.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "bun-types": "latest"
