--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 JWT_SECRET=eyJhbGciOiJIUzI1NiJ9.eyJ1c2VySWQiOjEsInVzZXJuYW1lIjoiYWRtaW4ifQ.dLX8rYu75P81MkVqP8_XPIWphKIZQ8x_rxz6zImbhmE
 
-DATABASE_URL="postgresql://postgres:@localhost:5432/iqair?schema=public"
+DATABASE_URL="postgresql://postgres:NhtkSWEyHuQrYXiRemZFcbOVsYsYsExy@junction.proxy.rlwy.net:10906/railway"
