--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts"
+    "generate": "bunx prisma generate",
+    "deploy": "bunx prisma migrate deploy",
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.1",
