--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
     "generate": "bunx prisma generate",
-    "deploy": "bunx prisma migrate deploy",
+    "deploy": "bunx prisma migrate deploy"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.1",
